--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,19 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  
 }
 
 /* do not edit this footer */
@@ -23,4 +27,15 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.plants{
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.indiv {
+  max-width: 200px;
+ 
 }
